objects/Live_Agent_Url_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be having pointing URL for Live Agent</description>
    <fields>
        <fullName>Url__c</fullName>
        <description>This text field will be having Urls pointing to respective Organization Live Agent Server</description>
        <label>Url</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buttonid__c</fullName>
        <description>This field will contain EnergyLink Live Agent Button Id</description>
        <label>buttonid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymentId__c</fullName>
        <description>This field will contain deployment id for Live Agent</description>
        <label>deploymentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Live Agent Url Configuration</label>
</CustomObject>